k8s/blacklist/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blacklist
  labels:
    app: blacklist
