k8s/blacklist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blacklist-service
  namespace: blacklist
  labels:
    app: blacklist
spec:
  type: ClusterIP
  selector:
    app: blacklist
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
